--- a/index.html
+++ b/index.html
@@ -150,120 +150,45 @@
                                         0.10 in
                                     </p>
                                 </th>
-                                <th class="max-wind"></th>
+                                <th class="max-wind">
+                                    <p>
+                                        max-wind: <br />
+                                        6.9
+                                    </p>
+                                </th>
                             </tr>
                         </table>
                     </div>
 
-                    <div class="sub-table">
+                    <div class="sub-table" id="render-data">
                         <table class="table-layout w-100">
                             <tbody>
-                                <tr>
+                                <tr class="TimeDate">
                                     <th class="col col-custom-table"></th>
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
+                                    <th class="col col-custom-table"></th>
+                                    <th class="col col-custom-table"></th>
+                                    <th class="col col-custom-table"></th>
 
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
-                                    <th class="col col-custom-table">
-                                        <p>
-                                            Tue 19 <br />
-                                            0:00 am
-                                        </p>
-                                    </th>
+                                    <th class="col col-custom-table"></th>
+                                    <th class="col col-custom-table"></th>
+                                    <th class="col col-custom-table"></th>
+                                    <th class="col col-custom-table"></th>
+                                    <th class="col col-custom-table"></th>
                                 </tr>
 
-                                <tr>
+                                <tr class="Icon">
                                     <td class="col col-custom-table">
                                         <p>Icon</p>
                                     </td>
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
 
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <img
-                                            src="./assets/img/176.webp"
-                                            alt=""
-                                        />
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
                                 </tr>
 
                                 <tr class="temp">
@@ -285,155 +210,74 @@
                                     <td class="col col-custom-table">
                                         <p>Wind</p>
                                     </td>
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
-
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>5.4 mph</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
                                 </tr>
 
-                                <tr>
+                                <tr class="Precip">
                                     <td class="col col-custom-table">
                                         <p>Precip</p>
                                     </td>
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
 
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>0.01 in</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
                                 </tr>
 
-                                <tr>
+                                <tr class="Cloud">
                                     <td class="col col-custom-table">
                                         <p>Cloud</p>
                                     </td>
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
 
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>70%</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
                                 </tr>
 
-                                <tr>
+                                <tr class="Humidity">
                                     <td class="col col-custom-table">
                                         <p>Humidity</p>
                                     </td>
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
 
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>93%</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
                                 </tr>
 
-                                <tr>
+                                <tr class="Pressure">
                                     <td class="col col-custom-table">
                                         <p>Pressure</p>
                                     </td>
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
 
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>29.8 in</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
                                 </tr>
                             </tbody>
                         </table>
