--- a/index.html
+++ b/index.html
@@ -270,15 +270,30 @@
                                     <td class="col col-custom-table">
                                         <p>Temp</p>
                                     </td>
-                                    <td class="col col-custom-table"></td>
-                                    <td class="col col-custom-table"></td>
-                                    <td class="col col-custom-table"></td>
-
-                                    <td class="col col-custom-table"></td>
-                                    <td class="col col-custom-table"></td>
-                                    <td class="col col-custom-table"></td>
-                                    <td class="col col-custom-table"></td>
-                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
+                                    <td class="col col-custom-table">
+                                        <p>78.7°f</p>
+                                    </td>
                                 </tr>
 
                                 <tr class="wind">
