--- a/index.html
+++ b/index.html
@@ -115,46 +115,46 @@
                     <div class="heading-table my-4">
                         <h1>Today's Weather in</h1>
                     </div>
-                    <div class="main-table">
+                    <div class="main-table" id="render-result">
                         <table class="table table-bordered">
                             <tr>
-                                <th class="col col-2">
-                                    <p>Sunrise: 05:44 AM</p>
-                                    <p>Sunset: 05:58 PM</p>
+                                <th class="col col-2" id="sunrise-sunset">
+                                    <!-- <p>Sunrise: 05:44 AM</p>
+                                    <p>Sunset: 05:58 PM</p> -->
                                 </th>
-                                <th class="col col-2">
-                                    <p>Moonrise: 07:21 AM</p>
-                                    <p>Moonset: 07:19 PM</p>
+                                <th class="col col-2" id="moonrise-moonset">
+                                    <!-- <p>Moonrise: 07:21 AM</p>
+                                    <p>Moonset: 07:19 PM</p> -->
                                 </th>
-                                <th class="max">
-                                    <p>
+                                <th class="max" id="max-temp">
+                                    <!-- <p>
                                         Max: <br />
                                         88P.2 °f
-                                    </p>
+                                    </p> -->
                                 </th>
-                                <th class="min">
-                                    <p>
+                                <th class="min" id="min-temp">
+                                    <!-- <p>
                                         Min: <br />
                                         75.9 °f
-                                    </p>
+                                    </p> -->
                                 </th>
-                                <th class="avg">
-                                    <p>
+                                <th class="avg" id="avg-temp">
+                                    <!-- <p>
                                         Avg: <br />
                                         80.6 °f
-                                    </p>
+                                    </p> -->
                                 </th>
-                                <th class="precip">
-                                    <p>
+                                <th class="precip" id="precip">
+                                    <!-- <p>
                                         Precip: <br />
                                         0.10 in
-                                    </p>
+                                    </p> -->
                                 </th>
-                                <th class="max-wind">
-                                    <p>
+                                <th class="max-wind" id="max-wind">
+                                    <!-- <p>
                                         max-wind: <br />
                                         6.9
-                                    </p>
+                                    </p> -->
                                 </th>
                             </tr>
                         </table>
@@ -304,6 +304,8 @@
         <script src="./assets/js/search.js"></script>
         <script src="./assets/js/colorTable.js"></script>
         <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/colorTable.js"></script>
+        <script src="./assets/js/colorMaintable.js"></script>
 
         <script src="./assets/js/main.js"></script>
         <script
